--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,15 @@
 [tool.poetry]
 name = "polyanalyst6api"
-version = "0.1.0"
+version = "0.1.1"
 description = "polyanalyst6api is a PolyAnalyst API client for Python."
+
+homepage = "https://github.com/Megaputer/polyanalyst6api-python"
 
 license = "MIT"
 
 authors = ["yatmanov <yatmanov@megaputer.ru>"]
 
-keywords = ['megaputer', 'polyanalyst', 'polyanalyst6api', 'api']
+keywords = ["megaputer", "polyanalyst", "polyanalyst6api", "api"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
