--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,5 +20,5 @@ requests = "^2.19"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
-sphinx = "^1.8.2"
-sphinx-autodoc-typehints = '^1.5.2'
+sphinx = "^1.8"
+sphinx-autodoc-typehints = '1.2.5'
