--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "polyanalyst6api"
-version = "0.3.0"
+version = "0.4.0"
 description = "polyanalyst6api is a PolyAnalyst API client for Python."
 authors = ["yatmanov <yatmanov@megaputer.ru>"]
 license = "MIT"
@@ -21,4 +21,4 @@ requests = "^2.19"
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
 sphinx = "^1.8"
-sphinx-autodoc-typehints = '1.2.5'
+sphinx-autodoc-typehints = "1.2.5"
