Show README.md content on the PyPI project page

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.8.2"
 description = "polyanalyst6api is a PolyAnalyst API client for Python."
 authors = ["yatmanov <yatmanov@megaputer.ru>"]
 license = "MIT"
+readme = "README.md"
 
 homepage = "https://github.com/Megaputer/polyanalyst6api-python"
 
