--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,5 +31,5 @@ towncrier = "^19.2"
 package = "polyanalyst6api"
 package_dir = "polyanalyst6api"
 filename = "CHANGELOG.md"
-directory = "CHANGES"
+directory = ".changes"
 title_format = "{version} ({project_date})"
