--- a/tests/cassettes/test_project_formats/test_get_tasks.yaml
+++ b/tests/cassettes/test_project_formats/test_get_tasks.yaml
@@ -6,29 +6,31 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      Authorization:
+      - Bearer e5a8c605d778fd87
       Connection:
       - keep-alive
       Cookie:
-      - extdebug=0; sid=7189801001788834022; underdev=1
+      - extdebug=0; underdev=1
       User-Agent:
-      - PolyAnalyst6API python client v0.14.0
+      - PolyAnalyst6API python client v0.20.0
     method: GET
     uri: https://localhost:5043/polyanalyst/api/v1.0/project/tasks?prjUUID=bbd41a95-a45c-4cd6-bb0a-8bc472d04708
   response:
     body:
-      string: '[{"name":"Python","objId":12,"progress":0.1501,"subProgress":-1,"currentState":"Getting
-        results from Python","startTime":1597079184998,"state":1}]'
+      string: '[{"name":"Python","objId":12,"progress":0.5001,"subProgress":-1,"currentState":"Waiting
+        data from external scripts.","startTime":1608023470134,"state":1}]'
     headers:
       access-control-allow-credentials:
       - 'true'
       cache-control:
       - no-cache, , must-revalidate
       content-length:
-      - '146'
+      - '154'
       content-type:
       - application/json; charset="utf-8"
       date:
-      - Mon, 10 Aug 2020 17:06:27 GMT
+      - Tue, 15 Dec 2020 09:11:12 GMT
       expires:
       - Thu, 31 Dec 1969 23:59:59 GMT
       pragma:
@@ -36,9 +38,14 @@ interactions:
       server:
       - PolyAnalyst/6.5
       set-cookie:
-      - sid=7189801001788834022; Path=/; Version=1; HttpOnly
-      - extdebug=0; Max-Age=2147483647; Path=/; Version=1
-      - underdev=1; Max-Age=2147483647; Path=/; Version=1
+      - extdebug=0; Max-Age=2147483647; Path=/; Version=1; SameSite=Lax
+      - underdev=1; Max-Age=2147483647; Path=/; Version=1; SameSite=Lax
+      x-content-type-options:
+      - nosniff
+      x-frame-options:
+      - sameorigin
+      x-session-id:
+      - e5a8c605d778fd87
     status:
       code: 200
       message: OK
