--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pytest-recording = "^0.8.1"
 jsonschema = "^3.2.0"
 pydantic = "^1.6.1"
 pytest-ordering = "^0.6"
+black = "^20.8b1"
 
 [tool.towncrier]
 package = "polyanalyst6api"
