--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["yatmanov <yatmanov@megaputer.ru>"]
 license = "MIT"
 readme = "README.md"
 
-repository = "https://github.com/Megaputer/polyanalyst6api-python/"
-documentation = "https://megaputer.github.io/polyanalyst6api-python/"
+repository = "https://github.com/Megaputer/polyanalyst6api-py"
+documentation = "https://megaputer.github.io/polyanalyst6api-py"
 
 keywords = ["megaputer", "polyanalyst", "polyanalyst6api", "api"]
 
