--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           python-version: ${{ env.PY_VER }}
       - run: |
+          pip install --upgrade pip
           pip install poetry==1.3.2
           poetry install
           poetry run make -C docs html
@@ -59,6 +60,7 @@ jobs:
         with:
           python-version: ${{ env.PY_VER }}
       - run: |
+          pip install --upgrade pip
           pip install poetry==1.3.2
           poetry install
           poetry run towncrier build --yes --version=${{ github.ref_name }}
